--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,9 @@ dependencies:
   lottie: ^3.1.2
   curved_navigation_bar: ^1.0.5
   equatable: ^2.0.5
-  url_launcher: ^6.0.6
+  url_launcher: ^6.3.0
   intl_phone_field: ^3.0.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
